--- a/login.css
+++ b/login.css
@@ -9,12 +9,12 @@
 
 body {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   min-height: 100vh;
-  width: 100%;
-  padding: 0 10px;
-  background: #000;
+  margin: 0;
+  position: relative;
 }
 
 body::before {
@@ -178,4 +178,10 @@ button:hover {
   margin-top: 30px;
   color: #fff;
   animation: fadeIn 1.5s ease-in-out;
+}
+
+.footer {
+  position: absolute;
+  bottom: -40%;
+  width: 100%;
 }
