--- a/login.css
+++ b/login.css
@@ -185,3 +185,30 @@ button:hover {
   bottom: -40%;
   width: 100%;
 }
+
+.input-field {
+  display: flex;
+  align-items: center;
+}
+
+#toggle-login-password {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  color: #ffffff;
+  margin-left: -30px;
+}
+
+#toggle-register-password{
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  color: #ffffff;
+  margin-left: -30px;
+}
+
+#password {
+  padding-right: 30px;
+}
