Fixed footer css in mobile view

--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -405,11 +405,13 @@ nav {
   text-align: center;
 }
 .footer-grid {
-  display: grid;
-  align-items: center;
-  justify-content: center;
+  display: flex;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 .footer {
@@ -666,6 +668,9 @@ nav {
     height: 100vh;
 
   } */
-
+  .quick-links ul{
+    flex-direction: column;
+  }
 
 }
+
