--- a/login.css
+++ b/login.css
@@ -9,12 +9,13 @@
 
 body {
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
   min-height: 100vh;
-  margin: 0;
-  position: relative;
+  width: 100%;
+  padding: 0 10px;
+  background: #000;
+  overflow: hidden;
 }
 
 body::before {
@@ -25,9 +26,19 @@ body::before {
   background: url("signin-registration images/bgpic.jpg");
   background-position: center;
   background-size: cover;
-  filter: blur(5px);
+  filter: blur(8px);
   z-index: -1;
   opacity: 0.7;
+  animation: zoomIn 10s infinite;
+}
+
+@keyframes zoomIn {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
 }
 
 .wrapper {
