--- a/faqpagestyle.css
+++ b/faqpagestyle.css
@@ -435,6 +435,10 @@ section {
 .footer-iconTop {
   text-align: center;
 }
+.socialIcons a:hover
+{
+  transform: scale(1.3);
+}
 #backtoTop{
   position :fixed;
   bottom: 90px;
