--- a/login.css
+++ b/login.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@200;300;400;500;600;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -22,25 +21,35 @@ body::before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url("signin-registration images/bgpic.jpg");
+  background: url("images/carousel-img-1.jpg");
   background-position: center;
   background-size: cover;
-  filter: blur(5px);
+  background-repeat: no-repeat;
   z-index: -1;
   opacity: 0.7;
+  animation: change 10s infinite ease-in-out;
 }
 
-.wrapper {
-  width: 400px;
-  border-radius: 8px;
-  padding: 30px;
-  text-align: center;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  animation: fadeIn 1s ease-in-out;
+@keyframes change {
+  0% {
+    background-image: url(images/carousel-img-1.jpg);
+  }
+  20% {
+    background-image: url(images/carousel-img-2.jpg);
+  }
+  40% {
+    background-image: url(images/carousel-img-3.jpg);
+  }
+  60% {
+    background-image: url(images/carousel-img-4.jpg);
+  }
+  80% {
+    background-image: url(images/carousel-img-5.jpg);
+  }
+  100% {
+    background-image: url(images/carousel-img-6.jpg);
+  }
 }
-
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -50,18 +59,6 @@ body::before {
     opacity: 1;
     transform: translateY(0);
   }
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-h2 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-  color: #fff;
-  animation: slideIn 0.6s ease-out;
 }
 
 @keyframes slideIn {
@@ -75,140 +72,195 @@ h2 {
   }
 }
 
-.input-field {
+.container {
+  background-color: #fff;
+  border-radius: 30px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
   position: relative;
-  border-bottom: 2px solid #ccc;
-  margin: 15px 0;
-  transition: border-color 0.3s;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
 }
 
-.input-field label {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  color: #fff;
-  font-size: 16px;
-  pointer-events: none;
-  transition: 0.3s ease;
+.container p {
+  font-size: 14px;
+  color: black;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  margin: 20px 0;
 }
-
-.input-field input {
-  width: 100%;
-  height: 40px;
-  background: transparent;
-  border: none;
-  outline: none;
-  font-size: 16px;
-  color: #fff;
-  transition: border-color 0.3s;
+.container span {
+  font-size: 12px;
+  color: black;
 }
-
-.input-field input:focus,
-.input-field input:valid {
-  border-color: #fff;
-}
-
-.input-field input:focus~label,
-.input-field input:valid~label {
-  font-size: 0.8rem;
-  top: 10px;
-  transform: translateY(-120%);
-}
-
-.input-field:hover {
-  border-color: #fff;
-}
-
-.forget {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 25px 0 35px 0;
-  color: #fff;
-  animation: fadeIn 1.2s ease-in-out;
-}
-
-#remember {
-  accent-color: #fff;
-}
-
-.forget label {
-  display: flex;
-  align-items: center;
-}
-
-.forget label p {
-  margin-left: 8px;
-}
-
-.wrapper a {
-  color: #efefef;
+.container a {
+  color: #333;
+  font-size: 13px;
   text-decoration: none;
-  transition: color 0.3s ease;
+  margin: 15px 0 10px;
 }
 
-.wrapper a:hover {
-  text-decoration: underline;
+.container button {
+  background-color: #0e4b16;
   color: #fff;
-}
-
-button {
-  background: #fff;
-  color: #000;
+  font-size: 12px;
+  padding: 10px 45px;
+  border: 1px solid transparent;
+  border-radius: 8px;
   font-weight: 600;
-  border: none;
-  padding: 12px 20px;
+  letter-spacing: 0.5;
+  text-transform: uppercase;
+  margin-top: 10px;
   cursor: pointer;
-  border-radius: 3px;
-  font-size: 16px;
-  border: 2px solid transparent;
-  transition: 0.3s ease;
 }
-
-button:hover {
-  color: #fff;
+.container button.hidden {
+  background-color: transparent;
   border-color: #fff;
-  background: rgba(255, 255, 255, 0.15);
-  transform: scale(1.05);
+}
+.container form {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  height: 100%;
 }
 
-.register {
-  text-align: center;
-  margin-top: 30px;
+.container input {
+  background-color: #eee;
+  border: none;
+  margin: 8px;
+  padding: 10px 15px;
+  font-size: 13px;
+  border-radius: 8px;
+  width: 100%;
+  outline: none;
+}
+.container h1 {
+  color: black;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+.sign-in {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+.container.active .sign-in {
+  transform: translateX(100%);
+}
+.sign-up {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+.container.container.active .sign-up {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: move 0.6s;
+}
+
+@keyframes move {
+  0%,
+  49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+  50%,
+  100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+.social-icons {
+  margin: 20px 0;
+}
+.social-icons a {
+  border: 1px solid #ccc;
+  border-radius: 20%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 3px;
+  width: 40px;
+  height: 40px;
+}
+.social-icons a:hover {
+  font-size: 25px;
+  background-color: #053314;
   color: #fff;
-  animation: fadeIn 1.5s ease-in-out;
 }
 
+.toggle-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: all 0.6s ease-in-out;
+  border-radius: 150px 0 0 100px;
+  z-index: 1000;
+}
+
+.container.active .toggle-container {
+  transform: translateX(-100%);
+  border-radius: 0px 150px 100px 0px;
+}
+.toggle {
+  height: 100%;
+  background: linear-gradient(to right, #0b8835, #0e4b16);
+  color: #fff;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: all 0.6s ease-in-out;
+}
+.container.active .toggle {
+  transform: translateX(50%);
+}
+.toggle-panel {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 30px;
+  text-align: center;
+  top: 0;
+  transform: translateX(0);
+  transition: all 0.6s ease-in-out;
+}
+
+.toggle-left {
+  transform: translateX(-200%);
+}
+.container.active .toggle-left {
+  transform: translateX(0);
+}
+.toggle-right {
+  right: 0;
+  transform: translateX(0);
+}
+.container.active .toggle-right {
+  transform: translateX(200%);
+}
 .footer {
   position: absolute;
   bottom: -40%;
   width: 100%;
-}
-
-.input-field {
-  display: flex;
-  align-items: center;
-}
-
-#toggle-login-password {
-  background: none;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  color: #ffffff;
-  margin-left: -30px;
-}
-
-#toggle-register-password{
-  background: none;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  color: #ffffff;
-  margin-left: -30px;
-}
-
-#password {
-  padding-right: 30px;
 }
