--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ section {
   font-size: 1.5rem;
   /* left: 118px; */
   color: var(--txt-color);
-  /* margin-right: 4rem; */
+  margin-right: 4rem;
   transition: 0.3s;
 }
 .navbar a:hover {
@@ -1155,6 +1155,7 @@ input[type="number"]::-webkit-inner-spin-button {
     position: absolute;
     top: 100%;
     left: 0;
+    min-height: 48vh;
     width: 100%;
     padding: 1rem 1%;
     background: var(--bg-color);
@@ -1168,7 +1169,7 @@ input[type="number"]::-webkit-inner-spin-button {
   }
   .navbar a {
     display: block;
-    font-size: 2.8vmax;
+    font-size: 2.5vmax;
     margin: 3rem 0;
     margin-left: 8vmax;
   }
