--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -672,9 +672,7 @@ nav {
   .navbar a.active {
     color: var(--txt-color);
     font-size: 2.5vmax;
-
   } 
-  
   /* .home {
     flex-direction: column-reverse;
     justify-content: space-around;
@@ -683,6 +681,8 @@ nav {
     height: 100vh;
 
   } */
-
+  .quick-links ul{
+    flex-direction: column;
+  }
 
 }
