--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -672,7 +672,7 @@ nav {
   .navbar a.active {
     color: var(--txt-color);
     font-size: 2.5vmax;
-  /* }  */
+  } 
   /* .home {
     flex-direction: column-reverse;
     justify-content: space-around;
@@ -681,4 +681,6 @@ nav {
     height: 100vh;
 
   } */
+
+
 }
