--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -644,7 +644,8 @@ nav {
     display: block;
     font-size: 4.5vmax;
   }
- /* .navbar {
+/*
+  .navbar {
     position: absolute;
     top: 100%;
     left: 0;
