--- a/style.css
+++ b/style.css
@@ -148,9 +148,11 @@ section {
 .navbar a.active:hover {
   color: var(--main-color);
 }
-  .navbar.active {
+.navbar.active {
   display: block;
-  height:50vh
+
+  height: 50vh;
+  
 }
 .logoImg {
   width: 80px;
