Fixed CSS of navbar

--- a/style.css
+++ b/style.css
@@ -1161,10 +1161,12 @@ input[type="number"]::-webkit-inner-spin-button {
     border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     display: none;
+    height: 50vh;
   }
 
   .navbar :active {
     display: block;
+    
   }
   .navbar a {
     display: block;
