--- a/faqpagestyle.css
+++ b/faqpagestyle.css
@@ -556,6 +556,7 @@ font-size: 36px;
       border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
       box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
       display: none;
+      height:420px;
     }
   
     .navbar :active {
