--- a/style.css
+++ b/style.css
@@ -1161,7 +1161,7 @@ input[type="number"]::-webkit-inner-spin-button {
     border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     display: none;
-    height: 50vh;
+    height: 420px;
   }
 
   .navbar :active {
