--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -642,6 +642,7 @@ nav {
     border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     display: none;
+    height:440px;
   }
 
   .navbar :active {
