--- a/style.css
+++ b/style.css
@@ -133,12 +133,31 @@ section {
   font-size: 1.5rem;
   /* left: 118px; */
   color: var(--txt-color);
-  margin-right: 4rem;
-  transition: 0.3s;
+  margin-left: 2rem;
+  transition: color 0.3s, transform 0.3s;
+  position: relative;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-weight: 600;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
+
 .navbar a:hover {
-  color: var(--main-color);
+  /* color: var(--main-color); */
+  animation: blink 1s infinite;
+  transform: scale(1.1);
+  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.6);
 }
+
+@keyframes blink {
+  0%, 100% {
+    color: var(--main-color);
+  }
+  50% {
+    color: transparent;
+  }
+}
+
 .navbar a:not(.active):hover {
   color: var(--main-color);
 }
@@ -1572,26 +1591,29 @@ font-size: 36px;
 .quick-links a {
   text-decoration: none;
   color: #fff;
-  transition: color 0.3s ease;
+  transition: color 0.3s, transform 0.3s;
   font-size: 1rem;
+  position: relative;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-weight: 600;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .quick-links a:hover {
   color: #abf5c0; /* Change color on hover */
   /* text-decoration: underline; */
-  animation: blink 1s step-start infinite;
-  text-shadow: 0 0 5px currentColor;
+  animation: blink 1s infinite;
+  transform: scale(1.1);
+  text-shadow: 1px 1px 5px rgba(275, 275, 275, 0.6);
 }
 
 @keyframes blink {
-  50% {
-    text-shadow: 
-      0 0 10px rgba(255, 255, 255, 0.8), /* White glow */
-      0 0 20px rgba(255, 0, 0, 0.7),     /* Red glow */
-      0 0 30px rgba(255, 0, 255, 0.6);   /* Pink glow */
+  0%, 100% {
+    color: var(--main-color);
   }
-  100% {
-    text-shadow: none;
+  50% {
+    color: transparent;
   }
 }
 
