--- a/faqpagestyle.css
+++ b/faqpagestyle.css
@@ -93,7 +93,7 @@ section {
 .navbar a {
   font-size: 1.5rem;
   color: var(--txt-color);
-  margin-left: 4rem;
+  margin-right: 5rem;
   transition: 0.3s;
  }
  .navbar a:hover {
@@ -571,7 +571,7 @@ font-size: 36px;
       margin-right: 2vmax;
     }
     .navbar a.active {
-      color: var(--txt-color);
+      color: var(--main-color);
       font-size: 2.5vmax;
     }  
    .slide_viewer {
