Required photos are updated

--- a/faqpagestyle.css
+++ b/faqpagestyle.css
@@ -180,7 +180,7 @@ section {
 .faq_container {
   max-width: 1500px;
   margin: 0 auto;
-    background-image: url('./faq/image.jpeg'); 
+    background-image: url('./faq/faq_image2.png'); 
     background-repeat: no-repeat; 
     background-position: center; 
     background-size: cover; 
