--- a/blogpagestyle.css
+++ b/blogpagestyle.css
@@ -303,10 +303,11 @@ a {
   gap: 8px;
 }
 #search-icon {
-  width: 35px;
-  height: 35px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   display: flex;
+  padding: 7px;
   justify-content: center;
   align-items: center;
   background-color: white;
