--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ section {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   z-index: 100;
+   /* z-index: 100; */
    transition: all 0.8s;
  }
  .header.sticky
